// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogForm /> Should render correctly 1`] = `
.c13 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c13:focus-within,
.c13:focus {
  outline: none !important;
}

.c13:focus-within::after,
.c13:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c13:focus,
.c13:hover {
  background-color: #004F8C;
  color: white;
}

.c13:active {
  background-color: #003E6F;
  color: white;
}

.c13:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 1.25rem;
  height: 1.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px #b2b2bf solid;
  border-radius: 0.25rem;
  background-color: #ffffff;
}

.c1:focus-within,
.c1:focus {
  position: relative;
  outline: none !important;
}

.c1:focus-within::after,
.c1:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
}

.c9 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  border-radius: 0.2rem;
  background: #ffffff;
  box-shadow: 0 0 0 1px #cdcdd7 inset;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9:focus-within,
.c9:focus {
  outline: none !important;
}

.c9:focus-within::after,
.c9:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c10 {
  position: absolute;
  top: 0.12rem;
  left: 0.15rem;
  display: none;
  pointer-events: none;
  color: #44aeff;
  fill: #44aeff;
}

.c11 {
  margin-left: 0.5rem;
  color: #1e1e1e;
  font-size: 1.2rem;
}

.c14 {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c2 {
  margin-bottom: 1rem;
  width: 100%;
  box-sizing: border-box;
}

.c12 {
  margin-bottom: 1rem;
}

.c7 {
  margin-bottom: 1rem;
}

.c0 {
  display: inline-block;
  width: 100%;
  margin: 0 0 0.375rem 0.1rem;
  color: #1e1e1e;
  font-size: 1rem;
  font-weight: bold;
}

.c3 {
  padding: 0.375rem 0.75rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: none;
  outline: none;
  background-color: transparent;
  color: #1e1e1e;
  font-size: 1rem;
}

.c3:disabled {
  color: #b2b2bf;
}

.c5 {
  margin-right: 0.5rem;
  color: #00a698;
  fill: #00a698;
}

@media (prefers-color-scheme:dark) {
  .c13:focus-within::after,
  .c13:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c13 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:focus,
  .c13:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus-within::after,
  .c1:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    border-color: white;
    background-color: #000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c9:focus-within::after,
  .c9:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c9 {
    background: #000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c10 {
    color: #ffffff;
    fill: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c11 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c3:disabled {
    color: #7b7b86;
  }
}

<div>
  <div
    class=""
  >
    <label
      class="c0"
      for="title_FORM_ID"
    >
      Title
    </label>
    <div
      class="c1 c2"
      placeholder="Title"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="title_FORM_ID"
        name="Title"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="tags_FORM_ID"
    >
      Tags
    </label>
    <div
      class="c1 c2"
      placeholder="Tags"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="tags_FORM_ID"
        name="Tags"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="blogImage_FORM_ID"
    >
      Blog image
    </label>
    <div
      class="c1 c2"
      placeholder="Blog image"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="blogImage_FORM_ID"
        name="Blog image"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="publishedTimestamp_FORM_ID"
    >
      Published timestamp
    </label>
    <div
      class="c1 c2"
      placeholder="Published timestamp"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="publishedTimestamp_FORM_ID"
        name="Published timestamp"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="blogCardDate_FORM_ID"
    >
      Blog card date override
    </label>
    <div
      class="c1 c2"
      placeholder="Blog card date override"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="blogCardDate_FORM_ID"
        name="Blog card date override"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c6 c7"
      id="light_FORM_ID"
    >
      <div
        class="c8"
      >
        <input
          aria-invalid="false"
          aria-label="Light"
          class="c9"
          name="Light"
          type="checkbox"
        />
        <svg
          class="c4 c10"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="c11"
      >
        Light
      </div>
    </label>
    <label
      class="c6 c7"
      id="published_FORM_ID"
    >
      <div
        class="c8"
      >
        <input
          aria-invalid="false"
          aria-label="Published"
          class="c9"
          name="Published"
          type="checkbox"
        />
        <svg
          class="c4 c10"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="c11"
      >
        Published
      </div>
    </label>
    <label
      class="c6 c7"
      id="showInBlogsList_FORM_ID"
    >
      <div
        class="c8"
      >
        <input
          aria-invalid="false"
          aria-label="Show in blogs list"
          class="c9"
          name="Show in blogs list"
          type="checkbox"
        />
        <svg
          class="c4 c10"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="c11"
      >
        Show in blogs list
      </div>
    </label>
    <label
      class="c0"
      for="blogImageBorderColor_FORM_ID"
    >
      Blog image border color
    </label>
    <div
      class="c1 c2"
      placeholder="Blog image border color"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="blogImageBorderColor_FORM_ID"
        name="Blog image border color"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="content_FORM_ID"
    >
      Content
    </label>
    <div
      class="c1 c12"
      placeholder="Content"
    >
      <textarea
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="content_FORM_ID"
        name="Content"
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="c13 c14"
      type="button"
    >
      <span
        class="c15"
      />
    </button>
  </div>
</div>
`;

exports[`<BlogForm /> Should render correctly with no blog id 1`] = `
.c13 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c13:focus-within,
.c13:focus {
  outline: none !important;
}

.c13:focus-within::after,
.c13:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c13:focus,
.c13:hover {
  background-color: #004F8C;
  color: white;
}

.c13:active {
  background-color: #003E6F;
  color: white;
}

.c13:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 1.25rem;
  height: 1.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px #b2b2bf solid;
  border-radius: 0.25rem;
  background-color: #ffffff;
}

.c1:focus-within,
.c1:focus {
  position: relative;
  outline: none !important;
}

.c1:focus-within::after,
.c1:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
}

.c9 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  border-radius: 0.2rem;
  background: #ffffff;
  box-shadow: 0 0 0 1px #cdcdd7 inset;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9:focus-within,
.c9:focus {
  outline: none !important;
}

.c9:focus-within::after,
.c9:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c10 {
  position: absolute;
  top: 0.12rem;
  left: 0.15rem;
  display: none;
  pointer-events: none;
  color: #44aeff;
  fill: #44aeff;
}

.c11 {
  margin-left: 0.5rem;
  color: #1e1e1e;
  font-size: 1.2rem;
}

.c14 {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c2 {
  margin-bottom: 1rem;
  width: 100%;
  box-sizing: border-box;
}

.c12 {
  margin-bottom: 1rem;
}

.c7 {
  margin-bottom: 1rem;
}

.c0 {
  display: inline-block;
  width: 100%;
  margin: 0 0 0.375rem 0.1rem;
  color: #1e1e1e;
  font-size: 1rem;
  font-weight: bold;
}

.c3 {
  padding: 0.375rem 0.75rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: none;
  outline: none;
  background-color: transparent;
  color: #1e1e1e;
  font-size: 1rem;
}

.c3:disabled {
  color: #b2b2bf;
}

.c5 {
  margin-right: 0.5rem;
  color: #00a698;
  fill: #00a698;
}

@media (prefers-color-scheme:dark) {
  .c13:focus-within::after,
  .c13:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c13 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:focus,
  .c13:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus-within::after,
  .c1:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    border-color: white;
    background-color: #000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c9:focus-within::after,
  .c9:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c9 {
    background: #000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c10 {
    color: #ffffff;
    fill: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c11 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c3:disabled {
    color: #7b7b86;
  }
}

<div>
  <div
    class=""
  >
    <label
      class="c0"
      for="requestedId_FORM_ID"
    >
      Requested ID
    </label>
    <div
      class="c1 c2"
      placeholder="Requested ID"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="requestedId_FORM_ID"
        name="Requested ID"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="title_FORM_ID"
    >
      Title
    </label>
    <div
      class="c1 c2"
      placeholder="Title"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="title_FORM_ID"
        name="Title"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="tags_FORM_ID"
    >
      Tags
    </label>
    <div
      class="c1 c2"
      placeholder="Tags"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="tags_FORM_ID"
        name="Tags"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="blogImage_FORM_ID"
    >
      Blog image
    </label>
    <div
      class="c1 c2"
      placeholder="Blog image"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="blogImage_FORM_ID"
        name="Blog image"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="publishedTimestamp_FORM_ID"
    >
      Published timestamp
    </label>
    <div
      class="c1 c2"
      placeholder="Published timestamp"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="publishedTimestamp_FORM_ID"
        name="Published timestamp"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="blogCardDate_FORM_ID"
    >
      Blog card date override
    </label>
    <div
      class="c1 c2"
      placeholder="Blog card date override"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="blogCardDate_FORM_ID"
        name="Blog card date override"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c6 c7"
      id="light_FORM_ID"
    >
      <div
        class="c8"
      >
        <input
          aria-invalid="false"
          aria-label="Light"
          class="c9"
          name="Light"
          type="checkbox"
        />
        <svg
          class="c4 c10"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="c11"
      >
        Light
      </div>
    </label>
    <label
      class="c6 c7"
      id="published_FORM_ID"
    >
      <div
        class="c8"
      >
        <input
          aria-invalid="false"
          aria-label="Published"
          class="c9"
          name="Published"
          type="checkbox"
        />
        <svg
          class="c4 c10"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="c11"
      >
        Published
      </div>
    </label>
    <label
      class="c6 c7"
      id="showInBlogsList_FORM_ID"
    >
      <div
        class="c8"
      >
        <input
          aria-invalid="false"
          aria-label="Show in blogs list"
          class="c9"
          name="Show in blogs list"
          type="checkbox"
        />
        <svg
          class="c4 c10"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="c11"
      >
        Show in blogs list
      </div>
    </label>
    <label
      class="c0"
      for="blogImageBorderColor_FORM_ID"
    >
      Blog image border color
    </label>
    <div
      class="c1 c2"
      placeholder="Blog image border color"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="blogImageBorderColor_FORM_ID"
        name="Blog image border color"
        value=""
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="c0"
      for="content_FORM_ID"
    >
      Content
    </label>
    <div
      class="c1 c12"
      placeholder="Content"
    >
      <textarea
        aria-disabled="false"
        aria-invalid="false"
        class="c3"
        id="content_FORM_ID"
        name="Content"
      />
      <svg
        class="c4 c5"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="c13 c14"
      type="button"
    >
      <span
        class="c15"
      />
    </button>
  </div>
</div>
`;
